style the scrollbar, fix bugs, move audio state to Zustand

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,21 @@
 html,
 body,
 :root {
-  height: 100%;
   -webkit-tap-highlight-color: transparent;
+  height: 100%;
+  width: 100%;
+}
+
+*::-webkit-scrollbar {
+  width: 1px;
+}
+
+*::-webkit-scrollbar-track {
+  background: transparent;
+  border-radius: 5px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: rgb(14 165 233 / 0.5);
+  border-radius: 14px;
 }
